[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "val_iter-python"
version = "1.0.0"
maintainers = [
  { name="Rebekah Fearnhead", email="r.fearnhead1@lancaster.ac.uk"},
]
authors = [
  { name="Rebekah Fearnhead", email="r.fearnhead1@lancaster.ac.uk"},
]
description = "Value Iteration for Markov Decision Processes"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/rfearnhead/val_iter"